# sparc

./: .gitignore  APP_SPEC.md  README.md  aline_specification.md  aline_technical_spec.md  pyproject.toml  requirements.txt  sparc_projects.db  test_api.sh
aihacker/: code_analyzer.py  test_code_analyzer.py
architecture/: Architecture.md  Completion.md  Pseudocode.md  README.md  Refinement.md  Specification.md  guidance.toml
architecture_20241108_192902_rust-using-websockets/: Architecture.md  Completion.md  Pseudocode.md  Refinement.md  Specification.md
architecture_20241108_193828_javascript--using-websockets/: Architecture.md  Completion.md  Pseudocode.md  Refinement.md  Specification.md
architecture_20241108_194514_flask-using-websockets/: Architecture.md  Completion.md  Pseudocode.md  Refinement.md  Specification.md
architecture_20241108_195213_denojs-using-websockets/: Architecture.md  Completion.md  Pseudocode.md  Refinement.md  Specification.md
architecture_20241108_200041_supabase-cli-for-devops-using-/: Completion.md  Pseudocode.md  Specification.md
architecture_20241108_205646_swarm-agents-using-langchainjs/: Architecture.md  Completion.md  Refinement.md  Specification.md  guidance.toml
architecture_20241108_210000_swarm-agents-using-denojs/: Refinement.md  Specification.md  guidance.toml
architecture_20241108_215639_Create-a-full-vitejs-with-stic/: Completion.md  guidance.toml
cli/sparc/: README.md  pyproject.toml  requirements.txt  setup.py
cli/sparc/src/: main_app.py  sparc_config.py
cli/sparc/tests/: test_main_app.py
docs/: API.md  (+15 more)
(+319 files in other folders)
