[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparc-cli"
version = "0.1.0"
description = "A CLI implementation of the SPARC framework"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "streamlit>=1.24.0",
    "pytest>=7.0.0",
    "aider-chat>=0.8.0",
    "rich>=10.0.0",
    "gitpython>=3.1.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
